# Parallel-and-distributed-computing-MIPT

isamidinovata-cuda-main/: .gitignore  .gitlab-ci.yml  CMakeLists.txt
isamidinovata-cuda-main/include/: CMakeLists.txt  Filter.cuh  KernelAdd.cuh  MatrixMul.cuh  ScalarMul.cuh
isamidinovata-cuda-main/runners/: 01-add.cu  02-mul.cu  03-matrix-add.cu  04-matrix-vector-mul.cu  05-scalar-mul.cu  06-cosine-vector.cu  07-matrix-mul.cu  08-filter.cu
isamidinovata-cuda-main/runners/graphs/: main.py
isamidinovata-cuda-main/src/: CosineVector.cu  Filter.cu  KernelAdd.cu  KernelMatrixAdd.cu  KernelMul.cu  MatrixMul.cu  MatrixVectorMul.cu  ScalarMul.cu  ScalarMulRunner.cu
isamidinovata-hdfs-main/: run.sh
isamidinovata-hdfs-main/hdfstask1/: run.sh
isamidinovata-hdfs-main/hdfstask2/: run.sh
isamidinovata-hdfs-main/hdfstask3/: run.sh
isamidinovata-hdfs-main/hdfstask5/: .gitlab-ci.yml  run.sh
isamidinovata-hive-main/hivetask1/: 1.sql  run.sh
isamidinovata-hive-main/hivetask2/: 2.sql  run.sh
isamidinovata-hive-main/hivetask3/: 3.sql  run.sh
isamidinovata-hive-main/hivetask4/: 4.sql  UDF.sh  run.sh
isamidinovata-hive-main/hivetask5/: 5.sql  run.sh
isamidinovata-mapreduce-main/mapreducetask1/: mapper.py  reducer.py  run.sh
isamidinovata-mpi-main/MPI_task/: integral.cpp  main.cpp  make_graph.py  run.sh
isamidinovata-pdspark-main/: README.md
isamidinovata-pdspark-main/pdsparktask1/: first.py  run.sh
